FAT commit, lots of small qol changes, added heart pickups, tuned lots of speeds and probabilities to make the game play better