@@ -3,7 +3,6 @@ package com.example.demo;
 import javafx.scene.Group;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class CollisionHandler {
     private final List<ActiveActorDestructible> friendlyUnits;
@@ -11,15 +10,17 @@ public class CollisionHandler {
     private final List<ActiveActorDestructible> userProjectiles;
     private final List<ActiveActorDestructible> enemyProjectiles;
     private final List<ActiveActorDestructible> exploded;
+    private final List<ActiveActorDestructible> healthPickUps;
     private final UserPlane user;
     private final Group root;
 
-    public CollisionHandler(Group root, UserPlane user, List<ActiveActorDestructible> friendlyUnits, List<ActiveActorDestructible> enemyUnits, List<ActiveActorDestructible> userProjectiles, List<ActiveActorDestructible> enemyProjectiles, List<ActiveActorDestructible> exploded) {
+    public CollisionHandler(Group root, UserPlane user, List<ActiveActorDestructible> friendlyUnits, List<ActiveActorDestructible> enemyUnits, List<ActiveActorDestructible> userProjectiles, List<ActiveActorDestructible> enemyProjectiles, List<ActiveActorDestructible> exploded, List<ActiveActorDestructible> healthPickUps) {
         this.friendlyUnits = friendlyUnits;
         this.enemyUnits = enemyUnits;
         this.userProjectiles = userProjectiles;
         this.enemyProjectiles = enemyProjectiles;
         this.exploded = exploded;
+        this.healthPickUps = healthPickUps;
         this.user = user;
         this.root = root;
     }
@@ -29,7 +30,16 @@ public class CollisionHandler {
         handleUserProjectileCollisions();
         handleEnemyProjectileCollisions();
         handlePlaneCollisions();
+        handleHealthPickUp();
         removeAllDestroyedActors();
+    }
+
+    private void handleHealthPickUp() {
+        for (ActiveActorDestructible heart : healthPickUps) {
+            if (user.getBoundsInParent().intersects(heart.getBoundsInParent())) {
+                heart.takeDamage();
+            }
+        }
     }
 
     private void handlePlaneCollisions() {
@@ -77,18 +87,12 @@ public class CollisionHandler {
     }
 
     private void removeDestroyedActors(List<ActiveActorDestructible> actors) {
-        List<ActiveActorDestructible> destroyedActors = actors.stream().filter(actor -> actor.isDestroyed())
-                .collect(Collectors.toList());
-        destroyedActors.forEach(destroyedActor -> destroyedActor.destroy());
-        for (ActiveActorDestructible actor : destroyedActors) {
-            exploded.add(actor);
-        }
+        List<ActiveActorDestructible> destroyedActors = actors.stream().filter(ActiveActorDestructible::isDestroyed).toList();
+        destroyedActors.forEach(ActiveActorDestructible::destroy);
+        exploded.addAll(destroyedActors);
         actors.removeAll(destroyedActors);
         for (ActiveActorDestructible actor: exploded) {
-            if (actor.destructionFrames > 25){
-                root.getChildren().remove(actor);
-                //exploded.remove(actor);
-            }
+            if (actor.destructionFrames > 25) root.getChildren().remove(actor);
             else actor.destructionFrames++;
         }
     }
